--- a/configuration.org
+++ b/configuration.org
@@ -758,6 +758,8 @@ started with Org mode" [[https://www.youtube.com/watch?v%3DSzA2YODtgK4][talk]].
                   op/category-config-alist))
       (setq op/category-ignore-list
             (cons "resume" op/category-ignore-list))
+      (setq op/category-ignore-list
+            (cons "drafts" op/category-ignore-list))
       (setq op/theme 'indiebrain))
   #+End_SRC
 
