Enable js-mode for react components

--- a/configuration.org
+++ b/configuration.org
@@ -485,6 +485,9 @@ started with Org mode" [[https://www.youtube.com/watch?v%3DSzA2YODtgK4][talk]].
 
   #+BEGIN_SRC emacs-lisp
     (use-package js
+      :mode
+      ("\\.js\\'" . js-mode)
+      ("\\.jsx\\'" . js-mode)
       :init
       (setq js-indent-level 2))
   #+END_SRC
