Add helm support for M-x execution

--- a/configuration.org
+++ b/configuration.org
@@ -577,7 +577,11 @@ started with Org mode" [[https://www.youtube.com/watch?v%3DSzA2YODtgK4][talk]].
 
   #+BEGIN_SRC emacs-lisp
     (use-package helm
-      :ensure t)
+      :ensure t
+      :bind
+      ("M-x" . helm-M-x)
+      :init
+      (setq helm-M-x-fuzzy-match t))
 
     (use-package helm-projectile
       :ensure t
