--- a/configuration.org
+++ b/configuration.org
@@ -193,20 +193,6 @@ started with Org mode" [[https://www.youtube.com/watch?v%3DSzA2YODtgK4][talk]].
 
 
 
-** Prefer two space character indentation
-
-   In my experience, whitespace is more portable than <tab>
-   characters. As such, I use two white-space characters for
-   indentation.
-
-   #+BEGIN_SRC emacs-lisp
-     (setq-default tab-width 2)
-     (setq-default indent-tabs-mode nil)
-   #+END_SRC
-
-
-
-
 
 * Window preferences
 
@@ -468,10 +454,10 @@ started with Org mode" [[https://www.youtube.com/watch?v%3DSzA2YODtgK4][talk]].
   support.
 
   #+BEGIN_SRC elisp
-    (use-package go
+    (use-package go-mode
       :ensure t
       :config
-      (add-hook 'before-save-hook 'gofmt-before-save))
+      (add-hook 'before-save-hook #'gofmt-before-save))
   #+END_SRC
 
 
