Include org-mode's contrib packages
Summary
-------

I'm toying around with replacing reveal.js with deck.js in my
talks. The contrib library contains org exporters for deck.js so I'm
adding those libraries here.

--- a/configuration.org
+++ b/configuration.org
@@ -531,6 +531,7 @@ started with Org mode" [[https://www.youtube.com/watch?v%3DSzA2YODtgK4][talk]].
 
   #+BEGIN_SRC emacs-lisp
     (use-package org
+      :ensure org-plus-contrib
       :init
       (package-initialize)
       :config
