--- a/configuration.org
+++ b/configuration.org
@@ -194,6 +194,20 @@ started with Org mode" [[https://www.youtube.com/watch?v%3DSzA2YODtgK4][talk]].
 
 
 
+** Undo
+
+   I've oft found the default Emacs undo functionality gets a bit
+   confusing when undo/redo comes into play. [[https://github.com/terryfinn][Terry]] agrees and uses undo-tree to get around this
+
+   #+BEGIN_SRC emacs-lisp
+     (use-package undo-tree
+       :ensure t
+       :init
+       (global-undo-tree-mode))
+   #+END_SRC
+
+
+
 * Window preferences
 
 ** Arrangement
@@ -504,6 +518,7 @@ started with Org mode" [[https://www.youtube.com/watch?v%3DSzA2YODtgK4][talk]].
        ("components\\/.*\\.js\\'" . rjsx-mode)
        ("containers\\/.*\\.js\\'" . rjsx-mode))
    #+END_SRC
+
 
 * Markdown
 
