--- a/configuration.org
+++ b/configuration.org
@@ -527,6 +527,43 @@ started with Org mode" [[https://www.youtube.com/watch?v%3DSzA2YODtgK4][talk]].
       (require 'ox-md))
   #+END_SRC
 
+* Presentations
+
+  I used to used a complex set of org-mode exporters, 3rd party
+  javascript, etc to make presentations. The export pipeline often
+  fell down when either emacs, org-mode, the org-mode exporter, or
+  JavaScript library were updated - or worse, I just stopped upgrading
+  things to compensate for the instability.
+
+  Instead, org-present is a dead simple way to make a basic slide-show
+  to accompany my talks and removes a bit of complexity compared to the
+  exporter pipeline I used to use.
+
+  #+BEGIN_SRC emacs-lisp
+    (use-package org-present
+      :ensure t
+      :config
+      (add-hook 'org-present-mode-hook
+                   (lambda ()
+                     (org-present-big)
+                     (org-display-inline-images)
+                     (org-present-hide-cursor)
+                     (org-present-read-only)))
+         (add-hook 'org-present-mode-quit-hook
+                   (lambda ()
+                     (org-present-small)
+                     (org-remove-inline-images)
+                     (org-present-show-cursor)
+                     (org-present-read-write))))
+  #+END_SRC
+
+  Give myself the option of hiding the mode line while doing presentations.
+
+  #+BEGIN_SRC emacs-lisp
+    (use-package hide-mode-line
+      :ensure t)
+  #+END_SRC
+
 * Project navigation
 
   Use Helm as the fuzzy matching search backend for projectile.
