Map the 'C-c p' key chord to trigger projectile
Summary
-------

Projectile used to do this on init, but it seems like it was removed
by default in recent versions.

References
----------

- https://github.com/bbatsov/projectile/commit/9c6e9813abec6e067c659e9107bf356086a95e04

--- a/configuration.org
+++ b/configuration.org
@@ -608,7 +608,9 @@ started with Org mode" [[https://www.youtube.com/watch?v%3DSzA2YODtgK4][talk]].
       (add-hook 'elixir-mode-hook 'projectile-mode)
       (add-hook 'js-mode-hook 'projectile-mode)
       (add-hook 'ruby-mode-hook 'projectile-mode)
-      (add-hook 'web-mode-hook 'projectile-mode))
+      (add-hook 'web-mode-hook 'projectile-mode)
+      (define-key projectile-mode-map (kbd "s-p") 'projectile-command-map)
+      (define-key projectile-mode-map (kbd "C-c p") 'projectile-command-map))
   #+END_SRC
 
   Make it easier to navigate between related concepts in Rails
