--- a/configuration.org
+++ b/configuration.org
@@ -685,6 +685,17 @@ started with Org mode" [[https://www.youtube.com/watch?v%3DSzA2YODtgK4][talk]].
     :ensure t)
   #+END_SRC
 
+* Restclient
+
+  I sometimes work with web-y things. It's nice to not have to either
+  open a terminal appication or start up an =ansi-term= session to
+  fire =curl= commands. This installs the an http client -
+  [[https://github.com/pashky/restclient.el][restclient]] - that I can use straight from a buffer.
+
+  #+BEGIN_SRC emacs-lisp
+    (use-package restclient
+      :ensure t)
+  #+END_SRC
 * Regular Expressions
 
   #+BEGIN_SRC emacs-lisp
