Open HTTP query files in restclient mode

--- a/configuration.org
+++ b/configuration.org
@@ -728,6 +728,9 @@ started with Org mode" [[https://www.youtube.com/watch?v%3DSzA2YODtgK4][talk]].
 
   #+BEGIN_SRC emacs-lisp
     (use-package restclient
+       :mode
+       ("\\.rest\\'" . restclient-mode)
+       ("\\.restclient\\'" . restclient-mode)
       :ensure t)
   #+END_SRC
 
