--- a/configuration.org
+++ b/configuration.org
@@ -381,6 +381,23 @@ started with Org mode" [[https://www.youtube.com/watch?v%3DSzA2YODtgK4][talk]].
       :ensure t)
   #+END_SRC
 
+* docker-tramp
+
+  Use docker-tramp to allow editing of files inside running
+  containers. We use docker in development mode a bunch and it's a
+  pain in the ass to rebuild the container when testing out minor
+  changes like tweaking a config setting or something. This allows me
+  to open a tramp session in a running container see results more
+  quickly than rebuilding the container every time. Caveat, unless
+  those changes are preserved in a volume mount they disappear when
+  the container exits so use =docker-tramp= with caution.
+
+  To use =C-x C-f /docker:<user>@<container-id>:<path-to-file>=:
+
+  #+begin_src emacs-lisp
+    (use-package docker-tramp
+      :ensure t)
+  #+end_src
 * Elixir
 
   I dabble with a bit of [[http://elixir-lang.org/][Elixir]] here and there so I include support
