--- a/configuration.org
+++ b/configuration.org
@@ -389,6 +389,18 @@ started with Org mode" [[https://www.youtube.com/watch?v%3DSzA2YODtgK4][talk]].
       :ensure t)
   #+END_SRC
 
+* Diff-hl
+
+  Highlight SCM changes in the gutter
+
+  #+begin_src emacs-lisp
+    (use-package diff-hl
+      :ensure t
+      :init
+      (global-diff-hl-mode)
+      (diff-hl-flydiff-mode))
+  #+end_src
+
 * docker-tramp
 
   Use docker-tramp to allow editing of files inside running
