--- a/configuration.org
+++ b/configuration.org
@@ -502,7 +502,22 @@ started with Org mode" [[https://www.youtube.com/watch?v%3DSzA2YODtgK4][talk]].
        :commands magit-status magit-blame
        :bind ("C-x g" . magit-status))
    #+END_SRC
+** Forge
 
+   Forge allows you to work with Git forges, such as Github and
+   Gitlab, from the comfort of Magit and the rest of Emacs.
+
+   Forge fetches issues, pull-requests and other data using the
+   forge’s API and stores that in a local database. Additionally it
+   fetches the pull-request references using Git. Forge implements
+   various features that use this data but the database and
+   pull-request refs can also be used by third-party packages.
+
+  #+begin_src emacs-lisp
+    (use-package forge
+      :ensure t
+      :after magit)
+  #+end_src
 * Go
 
   I'm starting to dabble a bit with [[http://www.golang.org][go]]. Of course I want editor
