Try using a light theme
Someone on the internet said "Human eyeballs evolved to identify
silhouettes against bright backgrounds. The whole point of camoflauge
is to break up the human-shaped silhouette to confuse the enemy's
eyeballs. So give light themes a chance." I've been using dark themes
for years, but I figure going to the light-side might worth a try.

--- a/configuration.org
+++ b/configuration.org
@@ -94,7 +94,7 @@ started with Org mode" [[https://www.youtube.com/watch?v%3DSzA2YODtgK4][talk]].
      (use-package gruvbox-theme
        :ensure t
        :config
-       (load-theme 'gruvbox-dark-medium t))
+       (load-theme 'gruvbox-light-soft t))
    #+END_SRC
 
 ** Disable menu, toolbar, and scrollbar UI elements
