Add easy cargo invocation using keybindings for rust projects

--- a/configuration.org
+++ b/configuration.org
@@ -1414,6 +1414,11 @@ started with Org mode" [[https://www.youtube.com/watch?v%3DSzA2YODtgK4][talk]].
 
     (use-package rust-mode
       :ensure t
+      :bind (
+             ("C-c C-c" . rust-run)
+             ("C-c C-b" . rust-compile)
+             ("C-c C-t" . rust-test)
+             ("C-c C-l" . rust-run-clippy))
       :init
       (setq rust-format-on-save t))
   #+END_SRC
